--- a/index.html
+++ b/index.html
@@ -673,7 +673,7 @@ Water level GIF
                 //nextStep.style.visibility = "visible";
 
                 nextStep.style.display = "block";
-                //video.play();
+                video.play();
               });
             </script>
           </section>
