--- a/index.html
+++ b/index.html
@@ -630,7 +630,7 @@ Water level GIF
         <div id="nxtStep" class="scroll-center parallax__group z1 txtDark">
           <section class="content parallax__group">
             <div class="bg-vid parallax__layer parallax__layer--base">
-              <video id="video" playsinline autoplay preload muted>
+              <video id="video" poster="images/green_future.png" playsinline preload muted>
                 <source src="images/water_receding.mp4" type="video/mp4" />
               </video>
             </div>
