--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ Water level GIF
           <img id="volume" src="images/volume.png" />
         </figure>
 
-        <p id="mobAudio">Tap Here 4 Audio</p>
+        <p id="mobAudio">Tap Here for Audio</p>
 
         <script>
           let volume = document.querySelector("#volume");
