--- a/index.html
+++ b/index.html
@@ -628,7 +628,7 @@ Water level GIF
         </div>
 
         <div id="nxtStep" class="scroll-center parallax__group z1 txtDark">
-          <section class="content parallax__group">
+          <section class="content parallax__group" id="5">
             <div class="bg-vid parallax__layer parallax__layer--base">
               <video id="video" poster="images/green_future.png" playsinline preload muted>
                 <source src="images/water_receding.mp4" type="video/mp4" />
@@ -673,6 +673,7 @@ Water level GIF
               nextButton.addEventListener("click", function () {
                 nextStep.style.display = "block";
                 video.play();
+                document.getElementById("5").scrollIntoView({ behavior: "smooth" });
               });
 
               let stink = document.querySelector("#stink");
