--- a/index.html
+++ b/index.html
@@ -183,22 +183,22 @@ Water level GIF
               menuButton.classList.toggle("change");
             }
           }
-
+          
           menuButton.addEventListener("click", toggleMenu);
 
-          document.getElementByID("intro").onclick = (e) => {
+          document.querySelector("#intro").onclick = (e) => {
             document.getElementById("1").scrollIntoView({ behavior: "smooth" });
             toggleMenu();
           };
-          document.getElementByID("who").onclick = (e) => {
+          document.querySelector("#who").onclick = (e) => {
             document.getElementById("2").scrollIntoView({ behavior: "smooth" });
             toggleMenu();
           };
-          document.getElementByID("how").onclick = (e) => {
+          document.querySelector("#how").onclick = (e) => {
             document.getElementById("3").scrollIntoView({ behavior: "smooth" });
             toggleMenu();
           };
-          document.getElementByID("what").onclick = (e) => {
+          document.querySelector("#what").onclick = (e) => {
             document.getElementById("4").scrollIntoView({ behavior: "smooth" });
             toggleMenu();
           };
