--- a/index.html
+++ b/index.html
@@ -713,7 +713,7 @@ Water level GIF
 
             <a
               class="twtTrig"
-              href="https://twitter.com/intent/tweet?ref_src=twsrc%5Etfw&text=Static%20Template&tw_p=tweetbutton&url=https://nocapteam.github.io/"
+              href="https://twitter.com/intent/tweet?ref_src=twsrc%5Etfw&text=Let's%hold%corporations%responsible&tw_p=tweetbutton&url=https://nocapteam.github.io/"
             >
               Actual Tweet
             </a>
