--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@ Water level GIF
           <section class="content parallax__group">
             <figure class="logo"><img src="images/logo_grad.png" /></figure>
             <h4>
-              No Corporate Accountability Present
+              No Corporate Action Present
             </h4>
             <p>
               Greenhouse gas emissions are killing our planet and corporations
@@ -713,7 +713,7 @@ Water level GIF
 
             <a
               class="twtTrig"
-              href="https://twitter.com/intent/tweet?ref_src=twsrc%5Etfw&text=Let's%hold%corporations%responsible&tw_p=tweetbutton&url=https://nocapteam.github.io/"
+              href="https://twitter.com/intent/tweet?ref_src=twsrc%5Etfw&text=Let us hold corporations responsible&tw_p=tweetbutton&url=https://nocapteam.github.io/"
             >
               Actual Tweet
             </a>
